[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Game.gd" type="Script" id=2]
[ext_resource path="res://Game/Text.tscn" type="PackedScene" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 940.0
margin_top = 100.0
margin_right = 1820.0
margin_bottom = 980.0
grow_horizontal = 0
grow_vertical = 0
color = Color( 0.588235, 0.588235, 0.588235, 1 )

[node name="LineV" type="Line2D" parent="ColorRect"]
position = Vector2( 1236, -240.886 )
scale = Vector2( 0.990052, 0.941952 )
points = PoolVector2Array( -808.038, 1189.52, -808.038, 254.669 )
default_color = Color( 0.392157, 0.764706, 1, 1 )

[node name="LineH" type="Line2D" parent="ColorRect"]
position = Vector2( 1844, -28 )
points = PoolVector2Array( -960, 464, -1848, 464 )
default_color = Color( 0.392157, 0.764706, 1, 1 )

[node name="Q1_top" parent="." instance=ExtResource( 3 )]
margin_left = 890.0
margin_top = 0.0
margin_right = 1870.0
margin_bottom = 100.0
bbcode_enabled = true
meta_underlined = false
text = ""
scroll_active = false

[node name="Q1_bot" parent="." instance=ExtResource( 3 )]
margin_left = 890.0
margin_top = 980.0
margin_right = 1870.0
margin_bottom = 1080.0
bbcode_enabled = true
meta_underlined = false
text = ""
scroll_active = false

[node name="Q2_right" parent="." instance=ExtResource( 3 )]
margin_left = 1920.0
margin_top = 50.0
margin_right = 2900.0
margin_bottom = 150.0
rect_rotation = 90.0
bbcode_enabled = true
text = ""

[node name="Q2_left" parent="." instance=ExtResource( 3 )]
margin_left = 840.0
margin_top = 1030.0
margin_right = 1820.0
margin_bottom = 1130.0
rect_rotation = -90.0
bbcode_enabled = true
text = ""
